--- a/.github/workflows/AzureStatic.yml
+++ b/.github/workflows/AzureStatic.yml
@@ -23,21 +23,24 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
+    #environment:
+     # name: github-pages
+     # url: ${{ steps.deployment.outputs.page_url }}
+    name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+          creds: ${{ secrets.AZURE_CREDS }}
+        
+      - name: Checkout Source
+        uses: actions/checkout@v2
+
+      - name: Deploy to Azure
+        uses: TravisSpomer/deploy-to-azure-storage@v1.4.0
+        with:
+          source-path: 
+          sas-url: ${{ secrets.DEPLOY_SAS_STATIC }}
