--- a/.github/workflows/AzureStatic.yml
+++ b/.github/workflows/AzureStatic.yml
@@ -31,10 +31,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDS }}
+      #- name: Login to Azure
+      #  uses: azure/login@v1
+      #  with:
+      #   creds: ${{ secrets.AZURE_CREDS }}
         
       - name: Checkout Source
         uses: actions/checkout@v2
